<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_height="55dp"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.pixabayapp.CustomAutoCompleteView
            android:id="@+id/etSearch"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/rectangle_box"
            android:completionThreshold="1"
            android:digits="@string/textDigits"
            android:hint="Search"
            android:textColorHint="@color/light_grey"
            android:textColor="@color/black"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="6dp"
            android:paddingRight="22dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:ignore="MissingConstraints"/>



    <ImageView
            android:id="@+id/imgvClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:paddingRight="15dp"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintRight_toLeftOf="@id/btnSearch"
            android:src="@drawable/close_black"
            android:visibility="gone" />


    <Button
            android:id="@+id/btnSearch"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Search"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintLeft_toRightOf="@id/etSearch"
    />

    <!--
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->


    <!--<androidx.core.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/etSearch"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">-->



        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:paddingBottom="100dp"
                android:contentDescription="Search"
                app:layout_constraintTop_toBottomOf="@id/etSearch"
                android:orientation="vertical">
        </androidx.recyclerview.widget.RecyclerView>

  <!--  </androidx.core.widget.NestedScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>