<resources>
    <string name="app_name">PixabayApp</string>
    <string name="action_settings">Settings</string>


    <string name="internet_not_available">Internet not available</string>
    <string name="enter_search_text">Please enter search text</string>

    <string name="textDigits">0123456789_-,.qwertzuiopasdfghjklyxcvbnm ABCDEFGHIJKLMNOPQRSTUVWXYZ\n
    </string>

    <string name="auth_title"> Authenticate </string>
    <string name="auth_success">Congratulation ! You have Successfully Authorization has</string>
    <string name="aut_fail">Authorization is not Success</string>
    <string name="msg"> Sweep on your Fingerprint to Authorize</string>
    <string name="btn_auth">Sweep</string>


    <string name="fingerprint_not_supported"> Fingerprint not supported</string>
    <string name="no_fingerprint_configured"> No fingerprint configured</string>
    <string name="secure_lock_not_enabled"> Secure lock not enabled</string>
</resources>
